hphp/test/quick/hsl_systemlib_disabled.php.expectf

Fatal error: Call to undefined function HH\Lib\Vec\map() in %s/hsl_systemlib_disabled.php on line 8
